--- a/less/home-page.less
+++ b/less/home-page.less
@@ -43,6 +43,11 @@
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
+      img {
+        @media @phone {
+          width: 100%;
+        }
+      }
       @media @phone {
         display: none;
         &:first-child {
